# ncnn_infer

./: CMakeLists.txt  README.md  main.cpp  nanodet_m.param  tinydet.cpp  tinydet.h
